# MyMemory-MCP

./: .env.example  .gitignore  CLAUDE.md  README.md  STATUS.md  config.yaml  config.yaml.example  mcp_stdio.py  pyproject.toml
audits/: 2026-03-18-code-duplication-audit.md
docs/: 01-projet-vue-ensemble.md  02-algorithmes-et-methodes.md  03-interactions-et-pipeline.md  AUDIT_RESULTS.md  pipeline.md
prompts/: arbitrate_entity.md  consolidate.md  consolidate_facts.md  context_instructions.md  context_natural.md  context_natural_section.md  context_section.md  context_template.md  dedup_check.md  discover_relations.md  dream_plan.md  dream_validate.md  extract_facts.md  extract_relations.md  generate_context.md  summarize_entity.md
scripts/: benchmark_scoring.py  migrate_temporal_to_md.py
src/: cli.py
tests/: test_action_log.py  test_chat_splitter.py  test_chunking_spacy.py  test_cli.py  test_config.py  test_config_externalization.py  test_context.py  test_crash_recovery.py  test_dashboard_dream.py  test_doc_ingest.py  test_dream_agent.py  test_dream_dashboard.py  test_dream_deterministic.py  test_dream_events.py  test_dream_extract_docs.py  test_dream_persist.py  test_dream_report.py  test_e2e.py  test_enricher.py  test_extractor.py  test_fact_dedup.py  test_graph.py  test_indexer.py  test_ingest_invariants.py  test_insights.py  test_json_repair.py  test_keyword_index.py  test_llm.py  test_max_facts.py  test_mcp_crud_integration.py  test_mcp_smoke.py  test_mcp_stdio_launch.py  test_mcp_tools.py  test_mcp_transport.py  test_mentions.py  test_metrics.py  test_nlp.py  (+19 more)
(+63 files in other folders)
